# internal/http/router/router.go
@@ -24,6 +24,7 @@ func New(services *service.Registry) http.Handler {
 	cardHandler := handler.NewCardHandler(services.Card)
 	bidHandler := handler.NewBidHandler(services.Bid)
 	orderHandler := handler.NewOrderHandler(services.Order)
+	disputeHandler := handler.NewDisputeHandler(services.Dispute)
 	paymentHandler := handler.NewPaymentHandler(services.Payment)
 	wsHandler := handler.NewWSHandler(services.Realtime)
 
@@ -47,11 +48,18 @@ func New(services *service.Registry) http.Handler {
 			secure.Put("/cards/{id}", cardHandler.Update)
 			secure.Get("/requests/{id}/bids", bidHandler.List)
 			secure.Post("/requests/{id}/bids", bidHandler.Create)
-			secure.Post("/orders/from-offer", orderHandler.CreateFromOffer)
-			secure.Post("/orders/from-bid", orderHandler.CreateFromBid)
-			secure.Get("/orders", orderHandler.List)
-			secure.Get("/orders/{id}", orderHandler.Get)
-			secure.Patch("/orders/{id}/status", orderHandler.UpdateStatus)
+			secure.Route("/orders", func(orderRoutes chi.Router) {
+				orderRoutes.Post("/from-offer", orderHandler.CreateFromOffer)
+				orderRoutes.Post("/from-bid", orderHandler.CreateFromBid)
+				orderRoutes.Get("/", orderHandler.List)
+				orderRoutes.Route("/{id}", func(order chi.Router) {
+					order.Get("/", orderHandler.Get)
+					order.Patch("/status", orderHandler.UpdateStatus)
+					order.Post("/dispute", disputeHandler.Open)
+					order.Get("/dispute", disputeHandler.Get)
+					order.Post("/dispute/close", disputeHandler.Close)
+				})
+			})
 			secure.Post("/payments/deposits", paymentHandler.CreateDeposit)
 			secure.Get("/payments/balance", paymentHandler.Balance)
 			secure.Get("/ws/orders/{id}", wsHandler.Connect)
